<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team1"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/scoreTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/score1"
                android:textSize="50dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="#FFA726"
                android:onClick="updateScoreTeamA"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/button1"
                android:textAllCaps="true" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="#FFA726"
                android:onClick="updateScoreTeamA"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/button2"
                android:textAllCaps="true" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="#FFA726"
                android:onClick="updateScoreTeamA"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/button3"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#757575" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team2"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/scoreTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/score1"
                android:textSize="50dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="#FFA726"
                android:onClick="updateScoreTeamB"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/button1"
                android:textAllCaps="true" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="#FFA726"
                android:onClick="updateScoreTeamB"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/button2"
                android:textAllCaps="true" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="#FFA726"
                android:onClick="updateScoreTeamB"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/button3"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="#FFA726"
        android:onClick="resetScore"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/button4"
        android:textAllCaps="true" />
</RelativeLayout>